@@ -1,0 +1,15 @@
+﻿namespace AjLanguage.Expressions
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+
+    public class VariableVariableExpression : VariableExpression
+    {
+        public VariableVariableExpression(string name)
+            : base(name)
+        {
+        }
+    }
+}
