@@ -1,0 +1,21 @@
+﻿
+function FirstParameter(pars...)
+{
+	if (pars.Length>0)
+		return pars[0];
+		
+	return null;
+}
+
+function SecondParameter(pars...)
+{
+	if (pars.Length>1)
+		return pars[1];
+		
+	return null;
+}
+
+result = FirstParameter(1,2,3);		// 1
+result2 = SecondParameter(1,2,3);	// 2
+result3 = SecondParameter();		// null
+
